Initial Project Setup

--- a/client/index.html
+++ b/client/index.html
@@ -54,6 +54,9 @@
       <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+      <script src="bower_components/webicon/angular-webicon.js"></script>
+      <script src="bower_components/webicon/jquery-webicon.js"></script>
+      <script src="bower_components/restangular/dist/restangular.min.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js({.tmp,client}) app/app.js -->
@@ -62,6 +65,7 @@
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
       <script src="components/footer/footer.directive.js"></script>
+      <script src="components/icons/icons.service.js"></script>
       <script src="components/modal/modal.service.js"></script>
       <script src="components/navbar/navbar.controller.js"></script>
       <script src="components/navbar/navbar.directive.js"></script>
