--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -9,14 +9,7 @@
 </header>
 
 <div class="container">
-  <div class="row">
-    <div class="col-lg-12">
-      <h1 class="page-header">Features:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in main.awesomeThings">
-        <li><a href="#" tooltip="{{thing.info}}">{{thing.name}}</a></li>
-      </ul>
-    </div>
-  </div>
+  <webicon icon="smIcon:note"></webicon>
 </div>
 
 <footer></footer>
